# backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  assessment-laperra.json  docker-compose.yml  full-correct-reference.json  full-elgato-correct-reference.json  full-elgato.json  full-result.json  list_routes.py  pyproject.toml  schema_dump.sql  test_migration.db  test_migration_0007.db  test_refactor.py  test_routes.py  whisper-result.json
alembic/: env.py
alembic/versions/: 20260326_0001_initial_schema.py  20260326_0002_iam_tables.py  20260326_0003_school_classrooms.py  20260326_0004_password_reset_tokens.py  20260326_0005_add_student_gender_and_consent.py  20260326_0006_assessment_tables.py  20260326_0007_assessment_new_fields.py  20260328_0008_writing_response_new_fields.py  20260628_0009_seed_demo_templates_and_exercises.py  20260628_0010_add_repeat_fields.py
app/: main.py
app/api/: router.py
app/core/: config.py  email.py  security.py
app/db/: base.py  session.py
app/dependencies/: auth.py  services.py
app/domain/: enums.py
app/models/: audio_sample.py  (+12 more)
docs/: writing-evaluation-metrics.md
early_literacy_mvp_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: diagnose_assessment_pipeline.py  diagnose_pronunciation_assessment.py  seed_assessment_demo.py  test_azure_speech_pronunciation.py
tests/: conftest.py  test_assessment.py  test_auth.py  test_azure_speech.py  test_classrooms.py  test_pronunciation_assessment.py  test_school_endpoints.py  test_sessions.py  test_students.py  test_whisper_assessment_pipeline.py
(+285 files in other folders)
