[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "early-literacy-mvp-backend"
version = "0.1.0"
description = "Backend MVP for early literacy screening support in primary schools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "azure-cognitiveservices-speech>=1.41.1",
  "azure-storage-blob>=12.24.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "passlib>=1.7.4",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.7.0",
  "PyJWT>=2.10.1",
  "python-multipart>=0.0.20",
  "SQLAlchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
